--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Flask App</title>
-</head>
-<body>
-    <h2>Welcome to the flask app</h2>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+<section>
+    <div class="container">
+        <div class="columns">
+            <div class="col-half">
+            <h1>Discover places near you.</h1>
+            <div class="buttons">
+                <button class="button"><a href="{{ url_for('index') }}">Signup</a></button>
+                <button class="button button-secondary"><a href="{{ url_for('about') }}">Learn more</a></button>
+            </div>
+        </div>
+        <div class="col-half">
+            <img src="{{ url_for('static', filename='assets/laptop.svg') }}" alt="App screenshot">
+        </div>
+        </div>
+    </div>
+</section>
+{% endblock %}
